@@ -16,8 +16,11 @@
 package com.alibaba.cloud.ai.graph.agent;
 
 import java.lang.reflect.Type;
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 import com.alibaba.cloud.ai.graph.CompileConfig;
 import com.alibaba.cloud.ai.graph.KeyStrategy;
@@ -28,14 +31,20 @@ import com.alibaba.cloud.ai.graph.agent.interceptor.ToolInterceptor;
 import com.alibaba.cloud.ai.graph.checkpoint.BaseCheckpointSaver;
 import com.alibaba.cloud.ai.graph.checkpoint.config.SaverConfig;
 
+import com.alibaba.cloud.ai.graph.serializer.StateSerializer;
+import com.alibaba.cloud.ai.graph.serializer.std.SpringAIStateSerializer;
 import io.micrometer.observation.ObservationRegistry;
 
 import org.springframework.ai.chat.client.ChatClient;
 import org.springframework.ai.chat.client.observation.ChatClientObservationConvention;
 import org.springframework.ai.chat.model.ChatModel;
 import org.springframework.ai.chat.prompt.ChatOptions;
+import org.springframework.ai.support.ToolCallbacks;
 import org.springframework.ai.tool.ToolCallback;
+import org.springframework.ai.tool.ToolCallbackProvider;
 import org.springframework.ai.tool.resolution.ToolCallbackResolver;
+
+import org.springframework.util.Assert;
 
 public abstract class Builder {
 
@@ -53,18 +62,24 @@ public abstract class Builder {
 
 	protected ChatClient chatClient;
 
-	protected List<ToolCallback> tools;
+	protected List<ToolCallback> tools = new ArrayList<>();
+
+	protected List<ToolCallbackProvider> toolCallbackProviders = new ArrayList<>();
+
+	protected List<String> toolNames = new ArrayList<>();
 
 	protected ToolCallbackResolver resolver;
+
+	protected Map<String, Object> toolContext = new HashMap<>();
 
 	protected boolean releaseThread;
 
 	protected BaseCheckpointSaver saver;
 
-	protected List<? extends Hook> hooks;
-	protected List<? extends Interceptor> interceptors;
-	protected List<ModelInterceptor> modelInterceptors;
-	protected List<ToolInterceptor> toolInterceptors;
+	protected List<Hook> hooks = new ArrayList<>();
+	protected List<Interceptor> interceptors = new ArrayList<>();
+	protected List<ModelInterceptor> modelInterceptors = new ArrayList<>();
+	protected List<ToolInterceptor> toolInterceptors = new ArrayList<>();
 
 	protected boolean includeContents = true;
 	protected boolean returnReasoningContents;
@@ -84,6 +99,8 @@ public abstract class Builder {
 	protected ChatClientObservationConvention customObservationConvention;
 
 	protected boolean enableLogging;
+	
+	protected StateSerializer stateSerializer;
 
 	public Builder name(String name) {
 		this.name = name;
@@ -107,17 +124,50 @@ public abstract class Builder {
 	}
 
 	public Builder tools(List<ToolCallback> tools) {
-		this.tools = tools;
+		Assert.notNull(tools, "tools cannot be null");
+		Assert.noNullElements(tools, "tools cannot contain null elements");
+		this.tools.addAll(tools);
 		return this;
 	}
 
 	public Builder tools(ToolCallback... tools) {
-		this.tools = Arrays.asList(tools);
+		Assert.notNull(tools, "tools cannot be null");
+		Assert.noNullElements(tools, "tools cannot contain null elements");
+		this.tools.addAll(List.of(tools));
+		return this;
+	}
+
+	public Builder methodTools(Object... toolObjects) {
+		Assert.notNull(toolObjects, "toolObjects cannot be null");
+		Assert.noNullElements(toolObjects, "toolObjects cannot contain null elements");
+		this.tools.addAll(Arrays.asList(ToolCallbacks.from(toolObjects)));
+		return this;
+	}
+
+	public Builder toolCallbackProviders(ToolCallbackProvider... toolCallbackProviders) {
+		Assert.notNull(toolCallbackProviders, "toolCallbackProviders cannot be null");
+		Assert.noNullElements(toolCallbackProviders, "toolCallbackProviders cannot contain null elements");
+		this.toolCallbackProviders.addAll(List.of(toolCallbackProviders));
+		return this;
+	}
+
+	public Builder toolNames(String... toolNames) {
+		Assert.notNull(toolNames, "toolNames cannot be null");
+		Assert.noNullElements(toolNames, "toolNames cannot contain null elements");
+		this.toolNames.addAll(List.of(toolNames));
 		return this;
 	}
 
 	public Builder resolver(ToolCallbackResolver resolver) {
 		this.resolver = resolver;
+		return this;
+	}
+
+	public Builder toolContext(Map<String, Object> toolContext) {
+		Assert.notNull(toolContext, "toolContext cannot be null");
+		Assert.noNullElements(toolContext.keySet(), "toolContext keys cannot contain null elements");
+		Assert.noNullElements(toolContext.values(), "toolContext values cannot contain null elements");
+		this.toolContext.putAll(toolContext);
 		return this;
 	}
 
@@ -187,24 +237,33 @@ public abstract class Builder {
 	}
 
 	public Builder hooks(List<? extends Hook> hooks) {
-		this.hooks = hooks;
+		Assert.notNull(hooks, "hooks cannot be null");
+		Assert.noNullElements(hooks, "hooks cannot contain null elements");
+		this.hooks.addAll(hooks);
 		return this;
 	}
 
 	public Builder hooks(Hook... hooks) {
-		this.hooks = Arrays.asList(hooks);
+		Assert.notNull(hooks, "hooks cannot be null");
+		Assert.noNullElements(hooks, "hooks cannot contain null elements");
+		this.hooks.addAll(List.of(hooks));
 		return this;
 	}
 
 	public Builder interceptors(List<? extends Interceptor> interceptors) {
-		this.interceptors = interceptors;
+		Assert.notNull(interceptors, "interceptors cannot be null");
+		Assert.noNullElements(interceptors, "interceptors cannot contain null elements");
+		this.interceptors.addAll(interceptors);
 		return this;
 	}
 
 	public Builder interceptors(Interceptor... interceptors) {
-		this.interceptors = Arrays.asList(interceptors);
+		Assert.notNull(interceptors, "interceptors cannot be null");
+		Assert.noNullElements(interceptors, "interceptors cannot contain null elements");
+		this.interceptors.addAll(List.of(interceptors));
 		return this;
 	}
+
 
 	public Builder observationRegistry(ObservationRegistry observationRegistry) {
 		this.observationRegistry = observationRegistry;
@@ -218,6 +277,28 @@ public abstract class Builder {
 
 	public Builder enableLogging(boolean enableLogging) {
 		this.enableLogging = enableLogging;
+		return this;
+	}
+	
+	/**
+	 * Sets the state serializer for the agent.
+	 * @param stateSerializer the state serializer to use
+	 * @return this builder instance
+	 */
+	public Builder stateSerializer(StateSerializer stateSerializer) {
+		this.stateSerializer = stateSerializer;
+		return this;
+	}
+
+	/**
+	 * Sets the state serializer for the agent.
+	 * @param stateSerializer the SpringAI state serializer to use
+	 * @return this builder instance
+	 * @deprecated Use {@link #stateSerializer(StateSerializer)} instead
+	 */
+	@Deprecated
+	public Builder stateSerializer(SpringAIStateSerializer stateSerializer) {
+		this.stateSerializer = stateSerializer;
 		return this;
 	}
 
